feat: header styles

--- a/front-end/src/components/Header/styles.css
+++ b/front-end/src/components/Header/styles.css
@@ -1,4 +1,4 @@
-header, nav, ul, .userMenu {
+/* header, nav, ul, .userMenu {
   display: flex;
 }
 
@@ -14,4 +14,4 @@ nav, ul, a {
 
 .userMenu {
   gap: 0.7em;
-}
+} */
